# claude_examples

./: .gitignore
flask_project/: app.py
flask_project/board/: pages.py
flask_project/board/templates/: base.html
flask_project/board/templates/pages/: home.html
project01/: CLAUDE.md  main.py
tp_gittyup/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  main.py  pyproject.toml  readme.md
tp_gittyup/gitty_up/: cli.py  config.py  discovery.py  git_ops.py  runner.py
tp_gittyup/gitty_up/plans/: phase-3-summary.md  phase-4-summary.md  phase_1_impl.md
tp_gittyup/plans/: phase_2_impl.md  plan.md
tp_gittyup/tests/: test_cli_runner.py  test_discovery.py  test_git_ops.py
tp_hints/: prompt01.md  readme.md
